--- a/notebooks/1.0-dsp-DeepConvLSTM.ipynb
+++ b/notebooks/1.0-dsp-DeepConvLSTM.ipynb
@@ -2,24 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "--2019-03-28 07:13:44--  https://archive.ics.uci.edu/ml/machine-learning-databases/00226/OpportunityUCIDataset.zip\n",
-      "Resolving archive.ics.uci.edu... 128.195.10.249\n",
-      "Connecting to archive.ics.uci.edu|128.195.10.249|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 306636009 (292M) [application/zip]\n",
-      "Saving to: ‘../data/raw/OpportunityUCIDataset.zip’\n",
-      "\n",
-      "OpportunityUCIDatas 100%[===================>] 292.43M  49.4MB/s    in 6.9s    \n",
-      "\n",
-      "2019-03-28 07:13:52 (42.5 MB/s) - ‘../data/raw/OpportunityUCIDataset.zip’ saved [306636009/306636009]\n",
-      "\n"
+      "'wget' 不是内部或外部命令，也不是可运行的程序\n",
+      "或批处理文件。\n"
      ]
     }
    ],
@@ -29,34 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Checking dataset ../data/raw/OpportunityUCIDataset.zip\n",
-      "Processing dataset files ...\n",
-      "... file OpportunityUCIDataset/dataset/S1-Drill.dat\n",
-      "... file OpportunityUCIDataset/dataset/S1-ADL1.dat\n",
-      "... file OpportunityUCIDataset/dataset/S1-ADL2.dat\n",
-      "... file OpportunityUCIDataset/dataset/S1-ADL3.dat\n",
-      "... file OpportunityUCIDataset/dataset/S1-ADL4.dat\n",
-      "... file OpportunityUCIDataset/dataset/S1-ADL5.dat\n",
-      "... file OpportunityUCIDataset/dataset/S2-Drill.dat\n",
-      "... file OpportunityUCIDataset/dataset/S2-ADL1.dat\n",
-      "... file OpportunityUCIDataset/dataset/S2-ADL2.dat\n",
-      "... file OpportunityUCIDataset/dataset/S2-ADL3.dat\n",
-      "... file OpportunityUCIDataset/dataset/S3-Drill.dat\n",
-      "... file OpportunityUCIDataset/dataset/S3-ADL1.dat\n",
-      "... file OpportunityUCIDataset/dataset/S3-ADL2.dat\n",
-      "... file OpportunityUCIDataset/dataset/S3-ADL3.dat\n",
-      "... file OpportunityUCIDataset/dataset/S2-ADL4.dat\n",
-      "... file OpportunityUCIDataset/dataset/S2-ADL5.dat\n",
-      "... file OpportunityUCIDataset/dataset/S3-ADL4.dat\n",
-      "... file OpportunityUCIDataset/dataset/S3-ADL5.dat\n",
-      "Final datasets with size: | train (557963, 113) | test (118750, 113) | \n"
+      "命令语法不正确。\n",
+      "Python was not found; run without arguments to install from the Microsoft Store, or disable this shortcut from Settings > Manage App Execution Aliases.\n"
      ]
     }
    ],
@@ -74,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,9 +451,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py35]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-py35-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -491,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
